--- a/main.html
+++ b/main.html
@@ -352,6 +352,12 @@ h3 {
 </div>
 
 <script type="text/javascript" src="./AI1.js"></script>
+<script type="text/javascript" src="./AI2.js"></script>
+<script type="text/javascript" src="./AI3.js"></script>
+<script type="text/javascript" src="./AI4.js"></script>
+<script type="text/javascript" src="./AI5.js"></script>
+<script type="text/javascript" src="./AI6.js"></script>
+<script type="text/javascript" src="./AI7.js"></script>
 <script type="text/javascript" src="./ocjs.js"></script>
 
 
